Remove file glob from CMake and little fixes

--- a/AdvancedViews/CMakeLists.txt
+++ b/AdvancedViews/CMakeLists.txt
@@ -4,9 +4,24 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 find_package(Qt5Quick)
 set(TRG_NAME AdvancedViews)
-file(GLOB TRG_SOURCES *.cpp)
-file(GLOB TRG_HEADERS *.h)
-file(GLOB TRG_RESOURCES *.qrc)
+set(TRG_SOURCES
+    advancedviews_plugin.cpp
+    axis.cpp
+    range.cpp
+    tableviewprivate.cpp
+)
+set(TRG_HEADERS
+    advancedviews_plugin.h
+    axis.h
+    cell.h
+    range.h
+    stdutils.h
+    table.h
+    tableviewprivate.h
+)
+set(TRG_RESOURCES
+    resources.qrc
+)
 configure_file(qmldir ${CMAKE_CURRENT_BINARY_DIR})
 add_library(${TRG_NAME} SHARED ${TRG_SOURCES} ${TRG_HEADERS} ${TRG_RESOURCES})
 set_target_properties(${TRG_NAME} PROPERTIES CXX_STANDARD 17)
