--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -4,9 +4,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 find_package(Qt5Quick)
 set(TRG_NAME Example)
-file(GLOB TRG_SOURCES *.cpp)
-file(GLOB TRG_HEADERS *.h)
-file(GLOB TRG_RESOURCES *.qrc)
-add_executable(${TRG_NAME} ${TRG_SOURCES} ${TRG_HEADERS} ${TRG_RESOURCES})
+set(TRG_SOURCES main.cpp)
+set(TRG_RESOURCES qml.qrc)
+add_executable(${TRG_NAME} ${TRG_SOURCES} ${TRG_RESOURCES})
 set_target_properties(${TRG_NAME} PROPERTIES CXX_STANDARD 17)
 target_link_libraries(${TRG_NAME} Qt5::Quick)
