--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -5,10 +5,8 @@ set(CMAKE_AUTOUIC ON)
 find_package(Qt5Quick)
 find_package(Qt5Test)
 set(TRG_NAME Test)
-file(GLOB TRG_SOURCES *.cpp)
-file(GLOB TRG_HEADERS *.h)
-file(GLOB TRG_RESOURCES *.qrc)
+set(TRG_SOURCES tst_advancedviews.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/AdvancedViews)
-add_executable(${TRG_NAME} ${TRG_SOURCES} ${TRG_HEADERS} ${TRG_RESOURCES})
+add_executable(${TRG_NAME} ${TRG_SOURCES})
 set_target_properties(${TRG_NAME} PROPERTIES CXX_STANDARD 17)
 target_link_libraries(${TRG_NAME} Qt5::Quick Qt5::Test)
